src/test/compile-fail/no_struct_literal_in_condition.mmtn
// { "compile_status": "fail" }

struct Unit {}

fn main() -> u64 {
    match Unit {} {
        Unit {} => 42,
    }
}
